--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,53 +8,29 @@
     ></script>
   </head>
   <body>
-    <header class="header">
-      <div class="header__wrapper">
-        <div class="header__row">
-          <div class="header__col">
-            <a href="/" class="logo">
-              <img
-                src="<%=require('../../images/placeholder-logo.svg')%>"
-                alt="Logo"
-                class="logo__image"
-              />
-            </a>
-          </div>
-        </div>
-      </div>
-    </header>
     <main>
       <section class="section">
         <div class="section__wrapper">
           <div class="section__row">
             <div class="section__col">
-              <h1>Project Title</h1>
-            </div>
-            <div class="section__col">
-              <img
-                class="image--contain"
-                src="<%=require('../../images/folder.svg')%>"
-                alt="folder"
-              />
+              <div class="images">
+                <div class="images__wrapper">
+                  <img
+                    src="<%=require('../../images/goat-background.jpg')%>"
+                    alt=""
+                    class="goat-image goat-image--background"
+                  />
+                  <img
+                    src="<%=require('../../images/goat-foreground.png')%>"
+                    alt=""
+                    class="goat-image goat-image--foreground"
+                  />
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="footer__wrapper">
-        <div class="footer__row">
-          <div class="footer__col">
-            <a href="/" class="logo">
-              <img
-                src="<%=require('../../images/placeholder-logo.svg')%>"
-                alt="Home"
-                class="logo__image"
-              />
-            </a>
-          </div>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
